# Rag_Studio_Client

./: LICENSE  README.md  api_gateway_event.json  main.py  requirements.txt  setup.cfg  setup.py
RagStudio.egg-info/: PKG-INFO  SOURCES.txt
Test/: uploader.ipynb
pages/: 1_Upload_File.py  2_Create_Collection.py  3_Chat_Collection.py  4_Chat_File.py  5_Manage.py
src/aws_rag/: Test_aws_rag.ipynb  aws_rag.py  us-east-1_john_uploaded_files_2304.08485.pdf_2304.08485.pdf_RootExtract.json
src/core/: Chat_Utility.py  StreamLit_Util.py
