[metadata]
name = RagStudio
version = 0.1
author = <Johnny2x2>
author_email = youremail@email.com
description = Manage and create Vector retrieval collections
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = rag_app